--- a/about-us.html
+++ b/about-us.html
@@ -69,11 +69,16 @@
     </header>
 
     <main>
-      <section class="breadcrumbs"></section> 
-      <!--need to add the breadcrumbs-->
+      <section class="breadcrumbs">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html" class="bold">About</a></li>
+          </ul>
+        </nav>  
+      </section>
 
       <h1>About us</h1>
-      <!--Need this to be aligned center-->
 
       <section class="about-us">
 
