--- a/checkout-success.html
+++ b/checkout-success.html
@@ -71,8 +71,17 @@
 
   <main>
 
-    <section class="breadcrumbs"></section> 
-    <!--need to add the breadcrumbs-->
+    <section class="breadcrumbs">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="checkout.html">Checkout</a></li>
+          <li><a href="checkout-success.html" class="bold">Checkout success</a></li>
+          <!--The checkout success gets on two lines ...-->
+        </ul>
+      </nav>
+    </section> 
 
     <h1>Your order has been confirmed!</h1>
 
