--- a/checkout.html
+++ b/checkout.html
@@ -71,8 +71,15 @@
 
   <main class="checkout">
 
-    <section class="breadcrumbs"></section> 
-    <!--need to add the breadcrumbs-->
+    <section class="breadcrumbs">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="checkout.html" class="bold">Checkout</a></li>
+        </ul>
+      </nav>
+    </section>
 
     <section class="shopping-cart">
       <div class="checkout-step">
