--- a/faq.html
+++ b/faq.html
@@ -71,8 +71,15 @@
 
   <main>
 
-    <section class="breadcrumbs"></section> 
-    <!--need to add the breadcrumbs-->
+    <section class="breadcrumbs">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contact-us.html">Contact</a></li>
+          <li><a href="faq.html" class="bold">FAQ</a></li>
+        </ul>
+      </nav>
+    </section>
 
     <h1>Frequently asked questions</h1>
 
