--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -71,8 +71,15 @@
   
     <main>
 
-      <section class="breadcrumbs"></section> 
-      <!--need to add the breadcrumbs-->
+      <section class="breadcrumbs">
+        <nav>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../shop.html">Shop</a></li>
+            <li><a href="../products/xplorer-fleece.html" class="bold">Xplorer fleece jacket</a></li>
+          </ul>
+        </nav>  
+      </section> 
 
       <section class="product-specific">
         <div class="product-image-container">
