--- a/shop.html
+++ b/shop.html
@@ -70,10 +70,16 @@
     </header>
 
     <main>
-      <section class="breadcrumbs"></section> 
-      <!--need to add the breadcrumbs-->
+      <section class="breadcrumbs">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shop.html" class="bold">Shop</a></li>
+          </ul>
+        </nav>  
+      </section>
 
-      <h1>Shop</h1>
+      <h1>Shop</h1> <!--This center aligned..-->
 
       <!--Should all the jackets link to the product specific page?-->
       <!--Should I add basket icon to the containers?-->
@@ -124,73 +130,6 @@
         </div>
 
       </section>
-
-
-      <!--
-      <section class="shop">
-  
-              <p>A lightweight runner jacket made from breathable materials and with a detachable hood</p>
-              <p class="orange">nok 999</p>
-            </div>
-          </div>
-  
-          <div class="shop-container">
-            <div>
-              <img src="assets/products/jacket-3.png" alt="racerpro cross-country jacket" class="jacket-image">
-            </div>
-            <div class="jacket-info">
-              <p>RacerPro cross-country jacket</p>
-              <p>A jacket perfect for skiing with its elastic materials, extra padding, and lightweight design</p>
-              <p class="orange">nok 1 599</p>
-            </div>
-          </div>
-  
-          <div class="shop-container">
-            <div>
-              <img src="assets/products/jacket-4.png" alt="adventurer jacket" class="jacket-image">
-            </div>
-            <div class="jacket-info">
-              <p>Adventurer jacket</p>
-              <p>The perfect jacket for extreme adventures, providing maximum protection against rain and wind</p>
-              <p class="orange">nok 1 499</p>
-            </div>
-          </div>
-  
-          <div class="shop-container">
-            <div>
-              <img src="assets/products/jacket-5.png" alt="Softshell explorer jacket" class="jacket-image">
-            </div>
-            <div class="jacket-info">
-              <p>Softshell explorer jacket</p>
-              <p>A lightweight jacket made for long hikes with its breathing capabilities, and fleece inner lining</p>
-              <p class="orange">nok 999</p>
-            </div>
-          </div>
-  
-          <div class="shop-container">
-            <div>
-              <img src="assets/products/jacket-6.png" alt="everyday weather jacket" class="jacket-image">
-            </div>
-            <div class="jacket-info">
-              <p>Everyday weather jacket</p>
-              <p>This jacket is both water- and windproof, making it the perfect companion for long days outside</p>
-              <p class="orange">nok 1 599</p>
-            </div>
-          </div>
-  
-          <div class="shop-container">
-            <div>
-              <img src="assets/products/jacket-7.png" alt="trackingpro jacket" class="jacket-image">
-            </div>
-            <div class="jacket-info">
-              <p>TrackingPro jacket</p>
-              <p>This jacket is made to keep you warm and comfortable with its windproof lining and detachable hood</p>
-              <p class="orange">nok 1 499</p>
-            </div>
-          </div>
-  
-        </section>  
-      -->
 
     </main>
 
