--- a/contact-form.html
+++ b/contact-form.html
@@ -70,8 +70,15 @@
 
   <main>
 
-    <section class="breadcrumbs"></section> 
-    <!--need to add the breadcrumbs-->
+    <section class="breadcrumbs">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contact-us.html">Contact</a></li>
+          <li><a href="contact-form.html" class="bold">Contact form</a></li>
+        </ul>
+      </nav>
+    </section> 
 
     <h1>Send us a message</h1>
     <p>Have a question, comment, or just want to say hello? We'd love to hear from you!</p>
