--- a/contact-us.html
+++ b/contact-us.html
@@ -69,8 +69,14 @@
     </header>
 
     <main>
-      <section class="breadcrumbs"></section> 
-      <!--need to add the breadcrumbs-->
+      <section class="breadcrumbs">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact-us.html" class="bold">Contact</a></li>
+          </ul>
+        </nav>  
+      </section>
 
       <div class="contact-grid">
         <div>
