css on contact-us

--- a/faq.html
+++ b/faq.html
@@ -140,7 +140,7 @@
   
       <section class="faq-contact">
         <div>
-          <img src="assets/images/faq.png">
+          <img src="assets/images/faq.jpg">
         </div>
         <div>
           <p class="underline">Didn´t get the answers you were looking for? </p>
