styling on index

--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
       </section>
       
       <!-- Link this section to the shop? -->
-      <!-- The text is not styled - found this difficult -->
-      <!-- Desktop: Even with min-height and width the container is all wrong .. -->
       <section class="sale">
-        <div class="sale-info"> 
-          <p class="sale-title">End of season <spanclass="orange">sale</span></p>
-          <p class="sale-text">Get up to</p>
-          <p class="orange sale-percent">50% off</p>
+        <div class="sale-info">
+          <div>
+            <p class="sale-title">End of season <span class="orange">sale</span></p>
+          </div>
+          <div>
+            <p class="sale-text">Get up to</p>
+            <p class="orange sale-percent">50% off</p>  
+          </div>
         </div>
         <div class="sale-image-container">
           <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image">
         </div>
       </section>
 
-
-      <!-- The text on the cta-orange for "shop womens" gets on two lines before the screen changes to mobile .. -->
       <section class="shop">
         <p class="title">Shop our latest trends</p>
         <div class="shop-section"> 
@@ -113,7 +113,8 @@
         </div>
       </section>
 
-      <section class="activity"> <!--Should all the activities link to the shop page?-->
+      <section class="activity"> 
+        <!--Should all the activities link to the shop page?-->
         <p class="title">Shop by activity</p>
         <div class="activity-section">
           <div class="activity-container">
