--- a/contact-form.html
+++ b/contact-form.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your checkout at Rainydays was a success">
-    <title>Rainydays | Checkout success</title>
+    <meta name="description" content="Send a message to the Rainydays team">
+    <title>Rainydays | Contact form</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/contact-us.css">
