fixed jacket img - png

--- a/checkout.html
+++ b/checkout.html
@@ -90,7 +90,7 @@
       </div>
       <div class="shopping-cart-container">
         <div>
-          <img src="assets/products/jacket-1.jpg">
+          <img src="assets/products/jacket-1.png">
         </div>
         <div class="shopping-cart-info">
           <p class="bold">Xplorer fleece jacket</p>
