--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -84,7 +84,7 @@
       <section class="product-specific">
         <div class="product-image-container">
           <div class="product-image-container">
-            <img src="../assets/products/jacket-1.jpg" alt="xplorer fleece jacket" class="product-image">
+            <img src="../assets/products/jacket-1.png" alt="xplorer fleece jacket" class="product-image">
           </div>  
         </div>
         <div class="product-info">
