--- a/shop.html
+++ b/shop.html
@@ -87,7 +87,7 @@
 
         <a href="products/xplorer-fleece.html">
         <div class="shop-container">
-          <img src="assets/products/jacket-1.jpg" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-1.png" alt="xplorer fleece jacket">
           <p>Xplorer fleece jacket</p>
           <p class="bold orange">NOK 1499</p>
         </div>
