--- a/checkout-success.html
+++ b/checkout-success.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="css/content.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
