--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="css/content.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
@@ -82,7 +83,7 @@
     </section>
 
     <h1>Checkout</h1>
-
+    
     <section>
       <div class="checkout-title">
         <p class="checkout-number">1</p>
