--- a/contact-us.html
+++ b/contact-us.html
@@ -7,9 +7,8 @@
     <title>Rainydays | Contact us</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
-    <link rel="stylesheet" href="css/contact-us.css">
     <link rel="stylesheet" href="css/content.css">
-    <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
   </head>
   <body>
 
