--- a/checkout-success.html
+++ b/checkout-success.html
@@ -7,9 +7,8 @@
     <title>Rainydays | Checkout success</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
-    <link rel="stylesheet" href="css/checkout.css">
     <link rel="stylesheet" href="css/content.css">
-    <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
   </head>
 
 <body>
