--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
   </head>
 
   <body>
