--- a/checkout-success.html
+++ b/checkout-success.html
@@ -33,7 +33,7 @@
 
       <section class="rainydays-logo">
         <a href="index.html">
-          <img src="assets/icons/rainydays-logo-cropped.png">
+          <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
         </a>
       </section>
 
@@ -50,7 +50,7 @@
 
       <section class="search-field-desktop">
         <input type="text" class="search-field">
-        <img src="assets/icons/search-icon.png" class="search-icon">
+        <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
       </section>
 
       <section class="backet-container">
@@ -88,14 +88,14 @@
     <section class="checkout-success">
 
       <div>
-        <img src="assets/icons/checkmark.png" class="checkmark">
+        <img src="assets/icons/checkmark.png" class="checkmark" alt="large rainydays blue checkmark">
       </div>
 
       <div>
         <p>Congratulations! Your order with RainyDays has been successfully confirmed. Thank you for choosing us to be part of your outdoor adventures.</p>
         <p>Our team is working hard to prepare your order for shipment. You will receive a confirmation email with tracking information once your order has been processed and shipped.</p>
         <p>Keep an eye on your email inbox for updates about your order, and don´t hesitate to reach out to our customer service team if you have any questions or concerns. We´re here to help!</p>
-        <p class="underline">Happy trails!</p>
+        <p class="bold">Happy trails!</p>
         <p class="bold">- The Rainydays team</p>
       </div>
 
@@ -161,7 +161,7 @@
         </div>
         <div class="desktop-newsletter-mail">
           <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-          <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>  
       </div>
@@ -181,7 +181,7 @@
         </div>
         <div class="newsletter-mail">
           <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
-          <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>
       </div>
