--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,7 @@
 
       <section class="rainydays-logo">
         <a href="index.html">
-          <img src="assets/icons/rainydays-logo-cropped.png">
+          <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
         </a>
       </section>
 
@@ -50,7 +50,7 @@
 
       <section class="search-field-desktop">
         <input type="text" class="search-field">
-        <img src="assets/icons/search-icon.png" class="search-icon">
+        <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
       </section>
 
       <section class="backet-container">
@@ -90,7 +90,7 @@
       </div>
       <div class="shopping-cart-container">
         <div>
-          <img src="assets/products/jacket-1.png">
+          <img src="assets/products/jacket-1.png" alt="a fleece jacket in the color evening green, with full front zip">
         </div>
         <div class="shopping-cart-info">
           <p class="bold">Xplorer fleece jacket</p>
@@ -283,7 +283,7 @@
         </div>
         <div class="desktop-newsletter-mail">
           <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-          <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>  
       </div>
@@ -303,7 +303,7 @@
         </div>
         <div class="newsletter-mail">
           <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
-          <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>
       </div>
