--- a/contact-form.html
+++ b/contact-form.html
@@ -33,7 +33,7 @@
 
       <section class="rainydays-logo">
         <a href="index.html">
-          <img src="assets/icons/rainydays-logo-cropped.png">
+          <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
         </a>
       </section>
 
@@ -50,7 +50,7 @@
 
       <section class="search-field-desktop">
         <input type="text" class="search-field">
-        <img src="assets/icons/search-icon.png" class="search-icon">
+        <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
       </section>
 
       <section class="backet-container">
@@ -102,7 +102,7 @@
       </section>
       <section>
         <div class="contact-form-message">
-          <label for="messsage">Message</label>
+          <label for="message">Message</label>
           <textarea id="message" name="message" placeholder="Send us a message..." required></textarea>
         </div>
       </section>
@@ -173,7 +173,7 @@
         </div>
         <div class="desktop-newsletter-mail">
           <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-          <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>  
       </div>
@@ -193,7 +193,7 @@
         </div>
         <div class="newsletter-mail">
           <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
-          <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>
       </div>
