--- a/contact-us.html
+++ b/contact-us.html
@@ -32,7 +32,7 @@
 
         <section class="rainydays-logo">
           <a href="index.html">
-            <img src="assets/icons/rainydays-logo-cropped.png">
+            <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
           </a>
         </section>
 
@@ -49,7 +49,7 @@
 
         <section class="search-field-desktop">
           <input type="text" class="search-field">
-          <img src="assets/icons/search-icon.png" class="search-icon">
+          <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
         </section>
 
         <section class="backet-container">
@@ -143,21 +143,6 @@
   
       </section>
 
-
-
-
-  <!--
-    
-            <div class="connect-type">
-            </div>
-            <div class="connect-type">
-            </div>
-            <div class="connect-newsletter">
-            </div>
-          </section>  
-        </div>  
-      </div>-->
-
     </main>
 
     <footer>
@@ -218,7 +203,7 @@
           </div>
           <div class="desktop-newsletter-mail">
             <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+            <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
               <!--need to make an overlay when pressed-->
           </div>  
         </div>
@@ -238,7 +223,7 @@
           </div>
           <div class="newsletter-mail">
             <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
-            <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+            <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
               <!--need to make an overlay when pressed-->
           </div>
         </div>
