--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
 
       <section class="rainydays-logo">
         <a href="index.html">
-          <img src="assets/icons/rainydays-logo-cropped.png">
+          <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
         </a>
       </section>
 
@@ -50,7 +50,7 @@
 
       <section class="search-field-desktop">
         <input type="text" class="search-field">
-        <img src="assets/icons/search-icon.png" class="search-icon">
+        <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
       </section>
 
       <section class="backet-container">
@@ -140,10 +140,10 @@
   
       <section class="faq-contact">
         <div>
-          <img src="assets/images/faq.jpg">
+          <img src="assets/images/faq.jpg" alt="a woman wearing a blue jacket overlooking a valley">
         </div>
         <div>
-          <p class="underline">Didn´t get the answers you were looking for? </p>
+          <p class="bold">Didn't get the answers you were looking for? </p>
           <a href="contact-form.html" class="cta-blue">SEND US A MESSAGE</a>
           <!-- How to make an overlay ?? -->  
         </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="desktop-newsletter-mail">
           <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-          <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>  
       </div>
@@ -230,7 +230,7 @@
         </div>
         <div class="newsletter-mail">
           <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
-          <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+          <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>
       </div>
