--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,7 @@
 
         <section class="rainydays-logo">
           <a href="index.html">
-            <img src="assets/icons/rainydays-logo-cropped.png">
+            <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
           </a>
         </section>
 
@@ -50,7 +50,7 @@
 
         <section class="search-field-desktop">
           <input type="text" class="search-field">
-          <img src="assets/icons/search-icon.png" class="search-icon">
+          <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
         </section>
 
         <section class="backet-container">
@@ -87,44 +87,44 @@
 
         <a href="products/xplorer-fleece.html">
         <div class="shop-container">
-          <img src="assets/products/jacket-1.png" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-1.png" alt="a fleece jacket in the color evening green, with full front zip">
           <p>Xplorer fleece jacket</p>
           <p class="bold orange">NOK 1499</p>
         </div>
         </a>
 
         <div class="shop-container">
-          <img src="assets/products/jacket-2.png" alt="runnerpluss jacket" class="jacket-image">
+          <img src="assets/products/jacket-2.png" alt="a lightweight runner jacket, in the color black">
           <p>RunnerPluss jacket</p>
           <p class="bold orange">NOK 999</p>
         </div>
 
         <div class="shop-container">
-          <img src="assets/products/jacket-3.png" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-3.png" alt="a bright red cross-country jacket with reflective details">
           <p>RacerPro jacket</p>
           <p class="bold orange">NOK 1599</p>
         </div>
 
         <div class="shop-container">
-          <img src="assets/products/jacket-4.png" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-4.png" alt="a jacket with extra padding and waistline belt, in the color orange and grey">
           <p>Adventurer jacket</p>
           <p class="bold orange">NOK 1499</p>
         </div>
 
         <div class="shop-container">
-          <img src="assets/products/jacket-5.png" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-5.png" alt="a black jacket with a wite stripe over the chest">
           <p>Softshell explorer jacket</p>
           <p class="bold orange">NOK 999</p>
         </div>
 
         <div class="shop-container">
-          <img src="assets/products/jacket-6.png" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-6.png" alt="a lightgrey jacket with full front-zip and waistline stretch">
           <p>Everyday weather jacket</p>
           <p class="bold orange">NOK 1599</p>
         </div>
 
         <div class="shop-container">
-          <img src="assets/products/jacket-7.png" alt="xplorer fleece jacket">
+          <img src="assets/products/jacket-7.png" alt="a dark grey jacket with pockets on the chest">
           <p>TrackerPro jacket</p>
           <p class="bold orange">NOK 1499</p>
         </div>
@@ -191,7 +191,7 @@
           </div>
           <div class="desktop-newsletter-mail">
             <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+            <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
               <!--need to make an overlay when pressed-->
           </div>  
         </div>
@@ -211,7 +211,7 @@
           </div>
           <div class="newsletter-mail">
             <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
-            <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+            <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
               <!--need to make an overlay when pressed-->
           </div>
         </div>
