--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The home page for the brand Rainydays">
     <title>Rainydays | Home</title>
+    <link rel="stylesheet" href="css/_variables.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/home.css">
