--- a/contact-form.html
+++ b/contact-form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Send a message to the Rainydays team">
     <title>Rainydays | Contact form</title>
+    <link rel="stylesheet" href="css/_variables.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/content.css">
