fixes and comments

--- a/checkout-success.html
+++ b/checkout-success.html
@@ -95,7 +95,7 @@
       <div>
         <p>Congratulations! Your order with RainyDays has been successfully confirmed. Thank you for choosing us to be part of your outdoor adventures.</p>
         <p>Our team is working hard to prepare your order for shipment. You will receive a confirmation email with tracking information once your order has been processed and shipped.</p>
-        <p>Keep an eye on your email inbox for updates about your order, and don´t hesitate to reach out to our customer service team if you have any questions or concerns. We´re here to help!</p>
+        <p>Keep an eye on your email inbox for updates about your order, and don't hesitate to reach out to our customer service team if you have any questions or concerns. We're here to help!</p>
         <p class="bold">Happy trails!</p>
         <p class="bold">- The Rainydays team</p>
       </div>
