--- a/contact-form.html
+++ b/contact-form.html
@@ -90,6 +90,7 @@
       <p>Your feedback is important to us and we're here to help with anything you need.</p>  
     </section>
 
+    <!-- Want the contact form info and the contact form message to be the same height ... -->
     <form class="contact-form">
       <section class="contact-form-info">
         <label for="firstname">First name</label>
