--- a/shop.html
+++ b/shop.html
@@ -80,7 +80,7 @@
         </nav>  
       </section>
 
-      <h1>Shop</h1> <!--This center aligned..-->
+      <h1>Shop</h1>
 
       <!--Should all the jackets link to the product specific page?-->
       <!--Should I add basket icon to the containers?-->
